# bevy_moon

./: Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
crates/bevy_moon/: Cargo.toml
crates/bevy_moon/src/: lib.rs  plugin.rs
crates/bevy_moon_core/: Cargo.toml
crates/bevy_moon_core/src/: geometry.rs  layout.rs  lib.rs  measure.rs  plugin.rs  stack.rs  style.rs  systems.rs
crates/bevy_moon_core/src/components/: computed.rs  content_size.rs  div.rs  image.rs  mod.rs  text.rs
crates/bevy_moon_glyphs/: 0-255.pbf  Cargo.toml
crates/bevy_moon_glyphs/src/: main.rs
crates/bevy_moon_render/: Cargo.toml
crates/bevy_moon_render/src/: lib.rs  plugin.rs  render_pass.rs  systems.rs  transparent.rs  view.rs
crates/bevy_moon_render/src/pipelines/: mod.rs  plugin.rs
crates/bevy_moon_render/src/pipelines/atlas/: draw.rs  extract.rs  mod.rs  pipeline.rs  plugin.rs  render.rs  systems.rs
crates/bevy_moon_render/src/pipelines/primitive/: draw.rs  extract.rs  mod.rs  pipeline.rs  plugin.rs  render.rs  systems.rs
crates/bevy_moon_render/src/pipelines/quad/: draw.rs  extract.rs  mod.rs  pipeline.rs  plugin.rs  render.rs  systems.rs
crates/bevy_moon_render/src/pipelines/shadow/: draw.rs  extract.rs  mod.rs  pipeline.rs  plugin.rs  render.rs  systems.rs
crates/bevy_moon_render/src/shaders/: README.md  atlas.wgsl  corners.wgsl  flags.wgsl  images.wgsl  prelude.wgsl  primitive.wgsl  quad.wgsl  rectangles.wgsl  shadow.wgsl  shadows.wgsl  utils.wgsl
crates/bevy_moon_render/src/shaders/libs/: atlas.wgsl  corners.wgsl  flags.wgsl  maths.wgsl  msdf.wgsl  quad.wgsl  rectangles.wgsl  utils.wgsl
examples/: Cargo.toml
examples/src/: ui.rs
