[package]
name = "examples"
publish = false
edition.workspace = true

[dependencies]
bevy = { workspace = true, default-features = false, features = [
  "default_app",
  "default_platform",
  "2d_bevy_render",
  "scene",
  "picking",
  "pan_camera",
] }

bevy_moon.workspace = true
bevy_moon_core.workspace = true
bevy_moon_render.workspace = true

taffy.workspace = true
tracing.workspace = true

lucide-icons.workspace = true

[[example]]
name = "ui"
path = "src/ui.rs"
