[package]
name = "bevy_moon"
description = "A world space UI for Bevy Engine"
keywords = ["bevy", "moon", "ui"]
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bevy_moon_core = { path = "../bevy_moon_core", version = "0.1.0" }
bevy_moon_render = { path = "../bevy_moon_render", version = "0.1.0" }

bevy_app.workspace = true

[features]

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
